bk_ida/gccida/g1/display_target_options
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/display_target_options/src/toplev.c:4198:7: error: unknown type name '$258AECD3FC566EB195B4BBD0B1CA287A'
const $258AECD3FC566EB195B4BBD0B1CA287A *v0; // rbx 
      ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/display_target_options/src/toplev.c:4203:7: error: unknown type name '$1D571F2FE86DE6D03AA3EA39F18D92F2'
const $1D571F2FE86DE6D03AA3EA39F18D92F2 *i; // rbx 
      ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/display_target_options/src/toplev.c:4207:7: error: use of undeclared identifier 'displayed_4'
if ( !displayed_4 ) 
      ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/display_target_options/src/toplev.c:4209:1: error: use of undeclared identifier 'displayed_4'
displayed_4 = 1; 
^
4 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/display_target_options/src/obj/toplev.o] Error 1
